Corrected Spacing

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -34,13 +34,12 @@ h2 div, p {
 	background-repeat: no-repeat;
 	border-radius: 90px;
 	height: 100px;
-	left: 0;
 	position: absolute;
-	right: 400px;
-	top: 50px;
+	left: 5%;
+	top: 20%;
 	transition: background-image .3s ease-in-out;
 	width: 100px;
-	margin: 0 auto;
+	margin: 5 auto;
 	padding: 10px;
 }
 
@@ -53,10 +52,10 @@ h2 div, p {
 	background-repeat: no-repeat;
 	border-radius: 90px;
 	height: 100px;
-	left: 0;
-	position: relative;
-	right: +200px;
-	top: +50px;
+	position: absolute;
+	left: 5%;
+	right: 5%;
+	top: 20%;
 	transition: background-image .3s ease-in-out;
 	width: 100px;
 	margin: 0 auto;
@@ -72,13 +71,12 @@ h2 div, p {
 	background-repeat: no-repeat;
 	border-radius: 90px;
 	height: 100px;
-	left: +200px;
-	position: relative;
-	right: 0px;
-	top: -70px;
+	position: absolute;
+	right: 5%;
+	top: 20%;
 	transition: background-image .3s ease-in-out;
 	width: 100px;
-	margin: 0 auto;
+	margin: 5 auto;
 	padding: 10px;
 }
 
